tests/vertical-slice/accept/imported_fn_local_shadow/main.hew
import m::*;

fn matching() -> i64 {
    1
}

fn mismatched() -> string {
    "local"
}

fn main() {
    println(matching());
    println(mismatched());
}
