tests/vertical-slice/reject/move_into_record_string.hew
type Holder { value: string; }

fn main() -> string {
    let s = "hello";
    let _holder = Holder { value: s };
    s
}
